kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: hello-service

spec:
  selector:
    app: hello

  ports:
    - port: 80
      targetPort: 3000

  type: LoadBalancer
